CREATE TABLE external_provider (
    id NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR2(255) NOT NULL,
    email VARCHAR2(255) NOT NULL,
    phone VARCHAR2(255) NOT NULL,
    active NUMBER(1, 0) DEFAULT 1 NOT NULL
);

ALTER TABLE training DROP COLUMN manager_review_external_provider_name;
ALTER TABLE training DROP COLUMN manager_review_external_provider_email;
ALTER TABLE training DROP COLUMN manager_review_external_provider_phone;

ALTER TABLE training ADD manager_review_external_provider_id NUMBER(19, 0);
ALTER TABLE training ADD CONSTRAINT fk_training_external_provider FOREIGN KEY (manager_review_external_provider_id) REFERENCES external_provider(id);
